# pymol-hoppy

./: .gitignore  .gitmodules  LICENSE  cabal.project  hie.yaml  setup.py  test.cpp
catamorphile/: CHANGELOG.md  Setup.hs  catamorphile.cabal
catamorphile-cpp/: CHANGELOG.md  Makefile  Setup.hs  catamorphile-cpp.cabal
catamorphile-cpp/cpp/: Catamorphile.cpp
catamorphile-cpp/src/Foreign/Pymol/Internal/: Dummy.hs
catamorphile-generator/: catamorphile-generator.cabal
catamorphile-generator/src/Foreign/: Catamorphile.hs  Pymol.hs
catamorphile-generator/src/Foreign/Pymol/Layer3/: AtomIterators.hs
catamorphile-python/: catamorphile.cpp
catamorphile/src/: Catamorphile.hs
catamorphile/src/Foreign/Pymol/: AtomIterators.hs  Catamorphile.hs  Std.hs
pymol-hoppy/: LICENSE  Setup.hs  pymol-hoppy.cabal
pymol-hoppy-cpp/: CMakeLists.txt  Makefile  Setup.hs  pymol-hoppy-cpp.cabal
pymol-hoppy-cpp/cmake/: CMakeLists.txt
pymol-hoppy-cpp/cpp/: Catamorphile.cpp  Catamorphile.hpp  Support.cpp
pymol-hoppy-cpp/cpp/dummy/: DummyAtomIterator.cpp  DummyAtomIterator.h
pymol-hoppy-extra/: pymol-hoppy-extra.cabal
pymol-hoppy-extra/src/Data/Pymol/: Extra.hs
pymol-hoppy-extra/src/Data/Pymol/Extra/: MonadicStreamFunction.hs  TemplateHaskell.hs
pymol-hoppy-generator/: CHANGELOG.md  pymol-hoppy-generator.cabal
pymol-hoppy-generator/app/: Main.hs
pymol-hoppy-generator/src/Foreign/: Pymol.hs
pymol-hoppy-generator/src/Foreign/Pymol/: Support.hs
pymol-hoppy-generator/src/Foreign/Pymol/Layer2/: AtomInfo.hs
pymol-hoppy-generator/src/Foreign/Pymol/Layer3/: AtomIterators.hs
pymol-hoppy-python/: PymolHoppyPython.cpp  PymolHoppyPython.hpp
pymol-hoppy/src/Data/Pymol/: Std.hs  Support.hs
pymol-hoppy/src/Data/Pymol/Layer2/: AtomInfo.hs
pymol-hoppy/src/Data/Pymol/Layer3/: AtomIterators.hs
