cabal-version:      2.4
name:               pymol-hoppy-extra
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Ernesto Rodriguez
maintainer:         neto@netowork.me
                    
-- A copyright notice.
-- copyright:
category:           Data
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Data.Pymol.Extra
                      Data.Pymol.Extra.MonadicStreamFunction
                      Data.Pymol.Extra.TemplateHaskell

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , dunai ^>= 0.9.2
                    , pymol-hoppy -any
                    , hoppy-runtime >=0.8 && <0.9
                    , template-haskell >= 2.16.0.0

    hs-source-dirs:   src
    default-language: Haskell2010
    libraries: HsPymolCpp
--    extra-libraries: HsPymolCpp
