cabal-version:      2.4
name:               pymol-hoppy-generator
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Ernesto Rodriguez
maintainer:         neto@netowork.me

-- A copyright notice.
-- copyright:
category:           Data
extra-source-files: CHANGELOG.md

library
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.0.0
                    , hoppy-generator >=0.8 && <0.9
                    , hoppy-std >=0.8 && <0.9
    hs-source-dirs:   src
    exposed-modules:
      Foreign.Pymol
      Foreign.Pymol.Layer2.AtomInfo
      Foreign.Pymol.Layer3.AtomIterators
      Foreign.Pymol.Support
    default-language: Haskell2010
                    
executable pymol-hoppy-generator
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.0.0
                    , pymol-hoppy-generator -any
                    , hoppy-generator >=0.8 && <0.9
                    , hoppy-std >=0.8 && <0.9
    hs-source-dirs:   app
    default-language: Haskell2010
