cabal-version:      2.4
name:               pymol-hoppy
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Ernesto Rodriguez
maintainer:         neto@netowork.me
                    
-- A copyright notice.
-- copyright:
category:           Data
extra-source-files: CHANGELOG.md

custom-setup
  setup-depends:
      base
    , Cabal
    , hoppy-runtime >=0.8 && <0.9
    , pymol-hoppy-generator -any

library
    exposed-modules:  Data.Pymol.Layer3.AtomIterators
                      Data.Pymol.Std
                      Data.Pymol.Support

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , pymol-hoppy-cpp -any
                    , hoppy-runtime >=0.8 && <0.9

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -lstdc++
